<resources>
    <string name="app_name">SociaBuzz</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_title">INFLUENCERS APP</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="forgot_password_text_view">Forgot Password</string>
    <string name="text_register_help">Don t have an account?</string>
    <string name="text_register">Sign up here</string>
    <string name="register_hint_first_name">Nama Depan*</string>
    <string name="register_hint_last_name">Nama Belakang*</string>
    <string name="register_hint_handphone">Handphone*</string>
    <string name="regsiter_hint_email">Email*</string>
    <string name="regsiter_hint_password">Password*</string>
    <string name="regsiter_hint_confirm_password">Ulangi Password*</string>
    <string name="register_button_submit">Daftar</string>
    <string name="register_check_box">Saya setuju dengan Syarat Ketentuan yang berlaku.</string>

</resources>
