<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sociabuzz.Android.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/frame_layout_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                android:padding="20dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_logo" />

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/register_hint_first_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="#C0C0C0"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/register_hint_last_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="#C0C0C0"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_register_handpone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/register_hint_handphone"
                    android:inputType="phone"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="#C0C0C0"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_register_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/regsiter_hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColorHint="#C0C0C0"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/regsiter_hint_password"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:password="true"
                    android:textColorHint="#C0C0C0"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/regsiter_hint_confirm_password"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:password="true"
                    android:textColorHint="#C0C0C0"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_term_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="test" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_term_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_check_box" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_register_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/msgResponse"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="sdfsdfsdf" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="@string/register_button_submit"
                    android:textSize="15sp" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</RelativeLayout>
